--- a/locale/ja/LC_MESSAGES/Horde_Kolab_Resource.po
+++ b/locale/ja/LC_MESSAGES/Horde_Kolab_Resource.po
@@ -1,41 +1,42 @@
-# Japanese translations for Horde_Kolab_Resource module.
-# Copyright (C) 2010 Horde Project
-# This file is distributed under the same license as the Horde_Kolab_Resource module.
-# Automatically generated, 2010.
+# Japanese translation for Horde.
+# Copyright 2004-2009 Horde Project
+# This file is distributed under the same license as the Horde package.
+# Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Horde_Kolab_Resource\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
-"POT-Creation-Date: 2010-10-13 01:27+0200\n"
-"PO-Revision-Date: 2010-10-13 01:27+0200\n"
-"Last-Translator: Automatically generated\n"
+"POT-Creation-Date: 2011-02-02 16:17+0100\n"
+"PO-Revision-Date: 2011-03-16 18:21+0900\n"
+"Last-Translator: Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>\n"
 "Language-Team: i18n@lists.horde.org\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: lib/Horde/Kolab/Resource.php:576
+#: lib/Horde/Kolab/Resource.php:557
 #, php-format
 msgid "%s has been cancelled"
-msgstr ""
+msgstr "%s はキャンセルされました"
 
-#: lib/Horde/Kolab/Resource.php:555 lib/Horde/Kolab/Resource.php:560
-#, fuzzy, php-format
+#: lib/Horde/Kolab/Resource.php:536 lib/Horde/Kolab/Resource.php:541
+#, php-format
 msgid "Error processing \"%s\""
-msgstr "\"%s\" の書き込みエラーです。"
+msgstr "\"%s\" 処理中のエラー"
 
-#: lib/Horde/Kolab/Resource.php:575
+#: lib/Horde/Kolab/Resource.php:556
 msgid "The following event has been successfully removed:"
-msgstr ""
+msgstr "このイベントは正常に削除されました："
 
-#: lib/Horde/Kolab/Resource.php:559
+#: lib/Horde/Kolab/Resource.php:540
 #, php-format
 msgid "The following event that was canceled is not present in %s's calendar:"
-msgstr ""
+msgstr "このキャンセルされたイベントは現在の %s の予定表にはありません："
 
-#: lib/Horde/Kolab/Resource.php:554
-#, fuzzy, php-format
+#: lib/Horde/Kolab/Resource.php:535
+#, php-format
 msgid "Unable to access %s's calendar:"
-msgstr "VFS ディレクトリにアクセスできません。"
+msgstr "%s の予定表にアクセスできません："
