--- a/locale/lt/LC_MESSAGES/Horde_Kolab_Resource.po
+++ b/locale/lt/LC_MESSAGES/Horde_Kolab_Resource.po
@@ -1,5 +1,5 @@
 # Lithuanian translations for Horde_Kolab_Resource module.
-# Copyright 2010-2011 The Horde Project
+# Copyright 2010-2011 Horde LLC
 # This file is distributed under the same license as the Horde_Kolab_Resource module.
 # Vilius Šumskas <vilius@lnk.lt>, 2011.
 #
