--- a/locale/lv/LC_MESSAGES/Horde_Kolab_Resource.po
+++ b/locale/lv/LC_MESSAGES/Horde_Kolab_Resource.po
@@ -1,5 +1,5 @@
 # Latvian translations for Horde_Kolab_Resource package.
-# Copyright 2011 Horde LLC
+# Copyright 2011 Horde LLC (http://www.horde.org/)
 # This file is distributed under the same license as the Horde_Kolab_Resource package.
 # Automatically generated, 2011.
 #
