--- a/locale/es/LC_MESSAGES/Horde_Kolab_Resource.po
+++ b/locale/es/LC_MESSAGES/Horde_Kolab_Resource.po
@@ -1,14 +1,14 @@
 # Spanish translations for Horde_Kolab_Resource package.
-# Copyright 2012-2013 Horde LLC (http://www.horde.org/)
+# Copyright (C) 2013 Horde LLC (http://www.horde.org/)
 # This file is distributed under the same license as the Horde_Kolab_Resource package.
-# Automatically generated, 2012.
+# Automatically generated, 2013.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Horde_Kolab_Resource \n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
 "POT-Creation-Date: 2012-01-17 12:38+0100\n"
-"PO-Revision-Date: 2012-01-17 12:38+0100\n"
+"PO-Revision-Date: 2013-06-11 20:26+0200\n"
 "Last-Translator: Manuel P. Ayala <mayala@unex.es>, Juan C. Blanco "
 "<jcblanco@fi.upm.es>\n"
 "Language-Team: i18n@lists.horde.org\n"
@@ -26,7 +26,7 @@ msgstr "se ha cancelado %s"
 #: lib/Horde/Kolab/Resource.php:536 lib/Horde/Kolab/Resource.php:541
 #, php-format
 msgid "Error processing \"%s\""
-msgstr "Error procesando \"%s\"."
+msgstr "Error procesando \"%s\""
 
 #: lib/Horde/Kolab/Resource.php:556
 msgid "The following event has been successfully removed:"
