--- a/doc/Horde/Kolab/Resource/CHANGES
+++ b/doc/Horde/Kolab/Resource/CHANGES
@@ -1,7 +1,8 @@
-----------------
-v1.0.0alpha1-git
-----------------
+------------
+v1.0.0alpha1
+------------
 
+[rla] Package for H6 / composer installer.
 [jan] Mark PHP 7 as supported.
 [jan] Fix issues with certain locales like Turkish.
 [jan] Update Basque translation (Ibon Igartua <ibon.igartua@ehu.es>).
